adding league and sport reqs
